<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.ayeshashahid.myapplication.MainActivity">
    <item
        android:id="@+id/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView"

        android:icon="@android:drawable/ic_menu_search"
        android:title="Search" />
    <item
        android:id="@+id/login"
        android:orderInCategory="2"
        android:title="@string/login"
        app:showAsAction="never" />
    <item
        android:id="@+id/signin"
        android:orderInCategory="2"
        android:title="@string/reg"
        app:showAsAction="never" />
    <item
        android:id="@+id/browse_course"
        android:orderInCategory="3"
        android:title="@string/browse_course"
        app:showAsAction="never" />
</menu>
