<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    android:background="@color/app_background_color">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:focusableInTouchMode="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="50dp"
        android:padding="12dp"
        android:background="@color/form_background_color"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/editbox_color"
            android:text="@string/signup"
            android:textAlignment="center"
            android:textSize="24sp"
            android:layout_margin="15dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/first_name"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:padding="10dp"
                android:paddingLeft="8dp"
                android:textSize="17sp"
                android:inputType="textCapSentences"
                android:background="@drawable/edittext_shape"/>
            <EditText
            android:id="@+id/last_name"
            android:layout_width="0dip"
                android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                    android:padding="10dp"
            android:paddingLeft="8dp"
            android:textSize="17sp"
            android:inputType="textCapSentences"
            android:background="@drawable/edittext_shape"/>
        </LinearLayout>
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:padding="10dp"
            android:paddingLeft="8dp"
            android:textSize="17sp"
            android:inputType="textEmailAddress"
            android:background="@drawable/edittext_shape"/>
        <EditText
            android:id="@+id/pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pwd_hint"
            android:padding="10dp"
            android:textSize="17sp"
            android:inputType="textPassword"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/edittext_shape"/>
<EditText
    android:id="@+id/confirm_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_pwd"
            android:padding="10dp"
            android:textSize="17sp"
            android:inputType="textPassword"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginBottom="15dp"
            android:background="@drawable/edittext_shape"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/btn_reg"
            android:id="@+id/signup"
            android:layout_margin="15dp"
            android:background="@drawable/button_shape"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:onClick="signin"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="26dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
android:src="@drawable/rigth_icon"
                android:layout_marginRight="10dp"
                android:layout_height="wrap_content"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/editbox_color"
                android:textSize="17sp"
                android:text="@string/alr_join"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
