<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.ayeshashahid.myapplication.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="@color/app_background_color">


   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="50dp"
       android:focusableInTouchMode="true"
       android:layout_marginLeft="20dp"
       android:layout_marginRight="20dp"
       android:layout_marginBottom="30dp"
       android:padding="12dp"
       android:background="@color/form_background_color"
       android:orientation="vertical">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textColor="@color/editbox_color"
    android:text="@string/signin"
    android:textAlignment="center"
    android:textSize="24sp"
    android:layout_margin="15dp"/>
       <EditText
           android:id="@+id/email"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/email_hint"
           android:layout_margin="15dp"
           android:padding="10dp"
           android:paddingLeft="8dp"
           android:paddingRight="8dp"
           android:textSize="17sp"
           android:inputType="textEmailAddress"
           android:background="@drawable/edittext_shape"/>
       <EditText
           android:id="@+id/pwd"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/pwd_hint"
           android:padding="10dp"
           android:textSize="17sp"
           android:paddingLeft="8dp"
           android:paddingRight="8dp"
           android:inputType="textPassword"
           android:layout_margin="15dp"
           android:background="@drawable/edittext_shape"/>

       <CheckBox
           android:theme="@style/checkBoxStyle"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/remember"
           android:textColor="@color/editbox_color"
           android:textSize="15sp"
           android:layout_marginLeft="15dp"
           android:buttonTint="@color/editbox_color"
         />
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textColor="@color/editbox_color"
           android:textSize="15sp"
           android:layout_marginLeft="48dp"
           android:text="@string/forget"/>

       <Button
           android:id="@+id/signin"
           android:layout_width="match_parent"
           android:layout_height="40dp"
           android:text="@string/signin"
           android:layout_margin="15dp"
           android:background="@drawable/button_shape"/>
       <LinearLayout
  android:orientation="horizontal"
           android:layout_marginTop="10dp"
           android:layout_marginBottom="15dp"
           android:layout_marginLeft="26dp"
           android:onClick="signup"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <ImageView
               android:layout_width="wrap_content"
               android:src="@drawable/rigth_icon"
               android:layout_marginRight="10dp"
               android:layout_height="wrap_content"
               />
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textColor="@color/editbox_color"
           android:textSize="15sp"
           android:text="@string/join"/>

       </LinearLayout>
   </LinearLayout>
    </ScrollView>
